--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  mapbox_maps_flutter: 0.5.1
+  google_maps_flutter: ^2.5.3
   flutter:
     sdk: flutter
 
